--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
 
+.clearfix:after { content: ""; display: block; clear: both; }
+
 img.bg {
   /* Set rules to fill background */
   min-height: 100%;
@@ -15,14 +17,10 @@ img.bg {
   left: 0;
 }
 
+#container_global { position: relative; text-align: left; width: 1000px; z-index:1; }
+.container_each {  position: absolute;  z-index:100; /*border: solid 1px black;*/ }
 
-body { }
-.clearfix:after { content: ""; display: block; clear: both; }
-
-#container_global { position: relative; text-align: left; width: 886px; z-index:1; }
-.container_each {  position: absolute;  z-index:100; background-image: url("../src/ptn4.png"); background-repeat : repeat;}
-.contents { margin: 0 auto 0; }
-
+/***************navigation*/
 /*#container_fixed { position:fixed; top: 80px; width: 886px; height: 200px; z-index: 200;}*/
 /*header { height: 200px; margin: 10px auto 10px; border: solid 1px;}*/
 nav { margin: 10px auto 10px;}
@@ -30,37 +28,50 @@ nav { margin: 10px auto 10px;}
 .menu_about, .menu_works { float: left; margin: 0 30px 0 10px; }
 .menu_members, .menu_contact { float: right; margin: 0 10px 0 30px; }
 
-.main_image { margin: 0 auto 5px; display: block; }
-
-.color_bg {
+/***************background color*/
+.red_bg {
 	background-image: url("../src/ptn3.png"); 
 	background-repeat : repeat;
+	/*
 	border-radius: 6px;
     -webkit-border-radius: 6px;  
     -moz-border-radius: 6px; 
+    */
 	/*opacity: .1; filter: alpha(opacity=10); -ms-filter: "alpha(opacity=75)"; -khtml-opacity: .1; -moz-opacity: .1;*/
 }
+.white_bg { 
+	background-image: url("../src/ptn_new.png"); 
+	background-repeat : repeat; 
+	/*border-radius: 6px;
+    -webkit-border-radius: 6px;  
+    -moz-border-radius: 6px; 
+    */
+}
 
-/*******************/
-li { list-style: none; }
-h2, h3, p, li { font-family: "メイリオ", "Meiryo", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "ＭＳ ゴシック", "Osaka", sans-serif; color: black; }
-h2 { font-size: 25px; line-height: 50px; /*font-weight: lighter;*/ margin: 30px 0 5px 5px;}
-p, li { font-size: 15px; line-height: 30px; color: black; /*color: #555;*/ }
-p { margin: 0 0 0 20px; text-indent: 1em;}
+/******************characters*/
+h2, h3, p, li { font-family: /*"ＭＳ Ｐ明朝",*/ "メイリオ", "Meiryo", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "ＭＳ ゴシック", "Osaka", sans-serif; color: black; font-size: 18pt; }
+h2 { font-size: 25px; line-height: 50px; }
+p, li { font-size: 17px; line-height: 35px; }
+
+.title { width: 200px; height: 60px; }
+a { text-decoration: none; }
 
 /*************about*/
-#purpose_list { margin: 0 0 0 20px; }
-#purpose_list li { /*color: gray;*/ }
-h3.concept_description { height: 100px; line-height: 100px; font-size: 25px; font-weight: lighter; text-align: center; }
+#about { margin: 280px auto 0; width: 950px; height: 1000px; }
+#about .contents { padding: 40px 70px 60px; margin: 20px auto 20px; }
+h3.concept_description { height: 100px; line-height: 100px; font-size: 25px; font-weight: lighter; text-align: center; margin-bottom: 50px; }
 
-/*************amembers*/
-.work_each { margin: 0 0 50px 0; }
-.work_image { float: left; }
-.work_result { margin: 0 0 0 20px; float: right;}
-.work_name { color: #222; font-size: 20px; width: 150px; text-align: center; }
-.work_description { font-size: 15px; /*color: gray;*/ margin: 5px 0 0 20px; }
+/*************members*/
+#members { margin: 500px auto 0 0; width: 500px; height: 600px; }
+#members .contents { padding: 20px 30px 20px; margin: 20px auto 20px; }
+#members li { line-height: 50px; }
 
-/*************amembers*/
-li#member_list ul { float: left; height: 100px;  margin: 0 10px 20px 5px; }
-.name { color: #222; font-size: 20px; width: 150px; text-align: center; }
-.personal { font-size: 15px; /*color: gray;*/ margin: 5px 0 0 20px; }
+/*************works*/
+#works { margin: 500px auto 0 0; width: 500px; height: 600px; }
+#works .contents { padding: 20px 30px 20px; margin: 20px auto 20px; }
+#works li { line-height: 50px; }
+
+/*************works*/
+#contact { margin: 500px auto 0 0; width: 600px; height: 600px; }
+#contact .contents { padding: 20px 30px 20px; margin: 20px auto 20px; }
+#contact p { line-height: 50px; }
